--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+colorama==0.4.4
 matplotlib==3.5.1
 netCDF4==1.5.8
 numpy==1.22.3
 odl==0.7.0
-Pillow==9.1.0
+Pillow==9.1.1
 scikit_image==0.19.2
 scipy==1.8.0
 skimage==0.0
