--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-colorama==0.4.4
-matplotlib==3.5.1
-netCDF4==1.5.8
-numpy==1.22.3
-odl==0.7.0
-Pillow==9.1.1
-scikit_image==0.19.2
-scipy==1.8.0
-skimage==0.0
-torch==1.12.0.dev20220503+cu116
+colorama
+matplotlib
+netCDF4
+numpy
+odl
+Pillow
+scikit_image
+scipy
+scikit-image
+torch
+tqdm
