--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-colorama
-matplotlib
-netCDF4
-numpy
-odl
-Pillow
-scikit_image
-scipy==1.8.1
-scikit-image
-torch
-tqdm
+colorama==0.4.3
+matplotlib==3.6.2
+netCDF4==1.6.1
+numpy==1.23.4
+Pillow==9.3.0
+proximal==0.1.7
+scikit_image==0.19.3
+scipy==1.9.3
+skimage==0.0
+torch==1.13.0
+tqdm==4.64.1
