Updated the forward operator and the backprojection notebook

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-colorama==0.4.3
-matplotlib==3.6.2
-netCDF4==1.6.2
-numpy==1.23.4
-Pillow==9.3.0
-proximal==0.1.7
-scikit_image==0.19.3
-scipy==1.9.3
-skimage==0.0
-torch==1.13.0
-tqdm==4.64.1
+colorama>=0.4.6
+matplotlib>=3.7.0
+numpy>=1.24.2
+Pillow>=9.4.0
+pylops>=2.0.0
+pyproximal>=0.5.0
+scipy>=1.10.1
